Convert 2nd test method of FindOperationTest; not passing yet